--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -14,7 +14,7 @@
             <h1>Blog details</h1>
             <nav aria-label="breadcrumb" class="banner-breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page"> Blog Details</li>
               </ol>
             </nav>
@@ -31,7 +31,7 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="main_blog_details">
-              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
+              <img class="img-fluid" src="{{ post.image_url }}" alt="">
               <h4>{{ post.title }}</h4>
               <div class="user_details">
                 <div class="mt-sm-0 mt-3">
@@ -59,26 +59,24 @@
 
             <div class="comments-area">
               <h4>{{ post.comments|length }} Comments</h4>
-              {% for comment in post.comments %}
-                <div class="comment-list">
-                  <div class="single-comment justify-content-between d-flex">
-                    <div class="user justify-content-between d-flex">
-                      <div class="desc">
-                        <h5><a href="#">{{ comment.author }}</a></h5>
-                        <p class="date">{{ comment.published_at }}</p>
-                        <p class="comment">
-                            {{ comment.text }}
-                        </p>
+                {% for comment in post.comments %}
+                  <div class="comment-list">
+                    <div class="single-comment justify-content-between d-flex">
+                      <div class="user justify-content-between d-flex">
+                        <div class="desc">
+                          <h5><a href="#">{{ comment.author }}</a></h5>
+                          <p class="date">{{ comment.published_at }}</p>
+                          <p class="comment">{{ comment.text }}</p>
+                        </div>
+                      </div>
+                      <div class="reply-btn">
+                        <a href="" class="btn-reply text-uppercase">reply</a> 
                       </div>
                     </div>
-                    <div class="reply-btn">
-                            <a href="" class="btn-reply text-uppercase">reply</a> 
-                    </div>
                   </div>
-                </div>
-              {% endfor %}
-
-
+                {% endfor %}
+            </div>
+          </div>  
           <!-- Start Blog Post Siddebar -->
           <div class="col-lg-4 sidebar-widgets">
             <div class="widget-wrap">
